# umepio

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/umep_inputs/: __init__.py
src/umep_inputs/solweig/: api.py  test.py
src/umep_inputs/solweig/processing/: buildings.py  chm.py  dems.py  landcover.py
src/umepio/: __init__.py
src/umepio/solweig/: api.py  io_utils.py
src/umepio/solweig/processing/: buildings.py  chm.py  dems.py  landcover.py
