[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "umepio"
version = "0.0.30"
dependencies = [
  "geopandas>=1.1.1",
  "laspy>=2.6.1",
  "laszip>=0.2.3",
  "matplotlib>=3.10",
  "numpy>=2.0",
  "pandas>=1.0.0",
  "rasterio>=1.0",
  "requests>=2.32.0",
  "scipy>=1.12",
  "Shapely>=2.1",
  "startinpy>=0.12.2"
]
authors = [
  { name="Anne den Hartog", email="ahartog@tudelft.nl" },
]
description = "This package can automatically generate the necessary input files for running the UMEP SOLWEIG solver"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/umepio"]

[tool.hatch.build.targets.sdist]
include = [
  "src/umepio/**"
]

[tool.hatch.build]
include = [
  "src/umepio/geotiles/*",
  "src/umepio/databases/*"
]

[project.urls]
Homepage = "https://github.com/anhart/umepio/"
Issues = "https://github.com/anhart/umepio/issues"